--- a/Data_Engineer_Project1.ipynb
+++ b/Data_Engineer_Project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "8484c34b",
    "metadata": {
     "scrolled": false
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "607675d2",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 34,
    "id": "382d0581",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 4,
    "id": "3c3d0d22",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 5,
    "id": "e72cd3f4",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "ddecb209",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "0a4f9860",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "4     West Germany 3–2 Hungary, Final  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 8,
    "id": "ada5f706",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "id": "0c718a3a",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "4              Not Awarded  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 10,
    "id": "c935955b",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 11,
    "id": "9ee4839f",
    "metadata": {
     "scrolled": true
@@ -475,77 +475,70 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>1942</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>1946</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
-       "      <td>(Not held because of World War II)</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
+       "      <td>Not held because of World War II</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Ranking  Year                                Host  \\\n",
-       "0        0  1930                             Uruguay   \n",
-       "1        1  1934                               Italy   \n",
-       "2        2  1938                              France   \n",
-       "3        3  1942  (Not held because of World War II)   \n",
-       "4        4  1946  (Not held because of World War II)   \n",
+       "   Ranking  Year                              Host  \\\n",
+       "0        0  1930                           Uruguay   \n",
+       "1        1  1934                             Italy   \n",
+       "2        2  1938                            France   \n",
+       "3        3  1942  Not held because of World War II   \n",
+       "4        4  1946  Not held because of World War II   \n",
        "\n",
-       "                             Champion  \\\n",
-       "0                             Uruguay   \n",
-       "1                               Italy   \n",
-       "2                               Italy   \n",
-       "3  (Not held because of World War II)   \n",
-       "4  (Not held because of World War II)   \n",
+       "                           Champion                                    Score  \\\n",
+       "0                           Uruguay       4–2 Estadio Centenario, Montevideo   \n",
+       "1                             Italy  2–1 (a.e.t.) Stadio Nazionale PNF, Rome   \n",
+       "2                             Italy             4–2 Stade de Colombes, Paris   \n",
+       "3  Not held because of World War II         Not held because of World War II   \n",
+       "4  Not held because of World War II         Not held because of World War II   \n",
        "\n",
-       "                                     Score  \\\n",
-       "0       4–2 Estadio Centenario, Montevideo   \n",
-       "1  2–1 (a.e.t.) Stadio Nazionale PNF, Rome   \n",
-       "2             4–2 Stade de Colombes, Paris   \n",
-       "3       (Not held because of World War II)   \n",
-       "4       (Not held because of World War II)   \n",
+       "                          Runner_up                             Third  \\\n",
+       "0                         Argentina                     United States   \n",
+       "1                    Czechoslovakia                           Germany   \n",
+       "2                           Hungary                            Brazil   \n",
+       "3  Not held because of World War II  Not held because of World War II   \n",
+       "4  Not held because of World War II  Not held because of World War II   \n",
        "\n",
-       "                            Runner_up                               Third  \\\n",
-       "0                           Argentina                       United States   \n",
-       "1                      Czechoslovakia                             Germany   \n",
-       "2                             Hungary                              Brazil   \n",
-       "3  (Not held because of World War II)  (Not held because of World War II)   \n",
-       "4  (Not held because of World War II)  (Not held because of World War II)   \n",
+       "                                Score.1                            Fourth  \\\n",
+       "0                               – [n 1]                        Yugoslavia   \n",
+       "1  3–2 Stadio Giorgio Ascarelli, Naples                           Austria   \n",
+       "2            4–2 Parc Lescure, Bordeaux                            Sweden   \n",
+       "3      Not held because of World War II  Not held because of World War II   \n",
+       "4      Not held because of World War II  Not held because of World War II   \n",
        "\n",
-       "                                Score.1                              Fourth  \\\n",
-       "0                               – [n 1]                          Yugoslavia   \n",
-       "1  3–2 Stadio Giorgio Ascarelli, Naples                             Austria   \n",
-       "2            4–2 Parc Lescure, Bordeaux                              Sweden   \n",
-       "3    (Not held because of World War II)  (Not held because of World War II)   \n",
-       "4    (Not held because of World War II)  (Not held because of World War II)   \n",
-       "\n",
-       "                         No. _ofteams  \n",
-       "0                                  13  \n",
-       "1                                  16  \n",
-       "2                                  15  \n",
-       "3  (Not held because of World War II)  \n",
-       "4  (Not held because of World War II)  "
+       "                       No. _ofteams  \n",
+       "0                                13  \n",
+       "1                                16  \n",
+       "2                                15  \n",
+       "3  Not held because of World War II  \n",
+       "4  Not held because of World War II  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 12,
    "id": "e3ff83ca",
    "metadata": {},
    "outputs": [],
@@ -566,7 +559,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
+   "id": "1a619d16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8035ab38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "connection is <connection object at 0x7fceb3980400; dsn: 'user=postgres password=xxx dbname=worldcup host=localhost', closed: 0> and cursor is <cursor object at 0x7fceb3912040; closed: 0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'connection is {conn} and cursor is {cur}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d58d23f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'psycopg2.extensions.connection'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(conn))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "d4241241",
    "metadata": {},
    "outputs": [],
@@ -586,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 14,
    "id": "0e1f18a3",
    "metadata": {},
    "outputs": [],
@@ -597,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 15,
    "id": "a5046ab9",
    "metadata": {},
    "outputs": [],
@@ -617,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 16,
    "id": "9cfdbb51",
    "metadata": {},
    "outputs": [],
@@ -628,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 17,
    "id": "d9c0ad3c",
    "metadata": {},
    "outputs": [],
@@ -651,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 18,
    "id": "c01ba13c",
    "metadata": {},
    "outputs": [],
@@ -672,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 19,
    "id": "db79130f",
    "metadata": {},
    "outputs": [],
@@ -683,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 20,
    "id": "e4e96f79",
    "metadata": {},
    "outputs": [],
@@ -693,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 21,
    "id": "83766ba7",
    "metadata": {},
    "outputs": [],
@@ -717,22 +754,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 31,
    "id": "9037946c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "unsupported format character ')' (0x29) at index 490",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_156842/874928321.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m                                \"\"\")\n\u001b[1;32m     14\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfinals\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfinals_data_table_insert\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: unsupported format character ')' (0x29) at index 490"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "finals_data_table_insert = (\"\"\"INSERT INTO finals(\n",
     "                               Ranking ,\n",
@@ -745,7 +770,7 @@
     "                               Score1 ,\n",
     "                               Fourth ,\n",
     "                               No_ofteams)\n",
-    "                               VALUES (%s,%s,%s,%s,%s,%s,%s,%s,%s,%)\n",
+    "                               VALUES (%s,%s,%s,%s,%s,%s,%s,%s,%s,%s)\n",
     "                               \"\"\")\n",
     "for i, row in finals.iterrows():\n",
     "    cur.execute(finals_data_table_insert, list(row))\n",
@@ -754,11 +779,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "82fc1a5b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=25, step=1)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finals.index"
+   ]
   },
   {
    "cell_type": "code",
